# audio-sim

./: .gitignore  README.md  requirements.txt  score.csv  test_polyphonic.py  test_trigger_variety.py  test_triggers.py
au-plugin/: .gitignore  CMakeLists.txt  PHASE1_STATUS.md  README.md
au-plugin/Tests/: test_modal_voice.cpp
au-plugin/src/au_wrapper/: ModalAttractorsAU.h  ModalAttractorsEngine.cpp  ModalParameters.h
au-plugin/src/dsp_core/: ModalVoice.cpp  ModalVoice.h  TopologyEngine.cpp  TopologyEngine.h  VoiceAllocator.cpp  VoiceAllocator.h
au-plugin/src/esp32_port/: audio_synth.c  audio_synth.h  modal_node.c  modal_node.h
docs/: AU_PLUGIN_PORTING_PROPOSAL.md  ESP32_HARDWARE_PROPOSAL.md  MIDI_CLIPS_READY_TO_USE.md  MIDI_GUIDE.md  MIDI_PATTERN_EXAMPLES.md  MIDI_PERFORMANCE_PRESETS.md  MIDI_PERFORMANCE_STRATEGIES.md  MIDI_PRACTICAL_KEYBOARD_GUIDE.md  MIDI_QUICK_REFERENCE.md  QUICK_START_KEYBOARD_MANUAL.md  RESONANT_EXCITATION_GUIDE.md  quantum_coherence_theory.md
esp32/: .gitignore  IMPLEMENTATION.md  README.md  TESTING.md
esp32/docs/: API.md  AUDIO_4CHANNEL.md  CONFIGURATION.md  DESIGN_SPEC.md  HUB_MODE.md  MESSAGING.md
esp32/firmware/: CMakeLists.txt  README.md
esp32/firmware-debug/: README.md  sdkconfig.defaults
esp32/firmware-debug/main/: CMakeLists.txt  Kconfig.projbuild  main.c
esp32/firmware-debug/main/audio/: audio_i2s.c  audio_i2s.h
esp32/firmware-debug/main/config/: hub_controller.c  session_config.c  session_config.h
esp32/firmware-debug/main/core/: modal_node.h
esp32/firmware-debug/main/debug/: debug_test.c  debug_test.h
esp32/firmware/main/: CMakeLists.txt  Kconfig.projbuild  hub_main.c  main.c
esp32/firmware/main/audio/: audio_i2s.c  audio_synth.c  audio_synth.h
esp32/firmware/main/config/: hub_controller.c  hub_controller.h  presets.c  session_config.c  session_config.h
esp32/firmware/main/core/: modal_node.c
esp32/firmware/main/network/: esp_now_manager.c  esp_now_manager.h  protocol.c  protocol.h
esp32/hardware/: README.md
esp32/tools/: README.md
experiments/: audio_sonification.py  quantum_coherence.py  rhythmic_computation.py
src/: midi_input.py  network.py  score.py  triggers.py
